@@ -19,6 +19,7 @@
 - Added "Adopt Current Camera Settings" item to vcam inspector context menu
 - HDRP: lens presets include physical settings if physical camera
 - Regression Fix: Framing Transposer: ignore LookAt target.  Use Follow exclusively
+- Bugfix: PostProcessing extension was not handling standby update correctly when on Manager Vcams
 - Bugfixes: (fogbugz 1193311, 1193307, 1192423, 1192414): disallow presets for vcams
 - Bugfix: added EmbeddedAssetHelper null check
 - Bugfix: composer screen guides drawn in correct place for physical camera
